--- a/CGV Project/css/three.css
+++ b/CGV Project/css/three.css
@@ -13,3 +13,124 @@
     border-style:groove;
     border-color: red;
 }
+h1{
+    color: #eeeeee;
+    font-family: "Times New Roman", Times, serif;
+    position: fixed;
+    top: 22%;
+    left: 50%;
+    
+    transform: translate(-50%, -50%);
+
+}
+h2{
+    color: #eeeeee;
+    font-family: "Times New Roman", Times, serif;
+    position: fixed;
+    top: 35%;
+    left: 50%;
+    
+    transform: translate(-50%, -50%);
+
+}
+h3{
+    color: #eeeeee;
+    font-family: "Times New Roman", Times, serif;
+    position: fixed;
+    top: 45%;
+    left: 50%;
+    
+    transform: translate(-50%, -50%);
+
+}
+
+body {
+	overflow: hidden;
+	margin: 0;
+	width: 100%;
+	height: 100%;
+}
+
+#loading-screen {
+	position: absolute;
+	z-index: 2;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgb(9, 30, 46);
+	opacity: 1;
+ 	transition: 1s opacity;
+}
+
+#loading-screen.fade-out {
+    opacity: 0;
+}
+
+#loader {
+    display: block;
+    position: relative;
+    left: 50%;
+    top: 50%;
+    width: 150px;
+    height: 150px;
+    margin: -75px 0 0 -75px;
+    border-radius: 50%;
+    border: 3px solid transparent;
+    /* border-top-color: #9370DB; */
+    border-top-color: #3498db;
+    -webkit-animation: spin 2s linear infinite;
+    animation: spin 2s linear infinite;
+}
+#loader:before {
+    content: "";
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    right: 5px;
+    bottom: 5px;
+    border-radius: 50%;
+    border: 3px solid transparent;
+    /* border-top-color: #BA55D3; */
+    border-top-color: #3498db;
+    -webkit-animation: spin 3s linear infinite;
+    animation: spin 3s linear infinite;
+}
+#loader:after {
+    content: "";
+    position: absolute;
+    top: 15px;
+    left: 15px;
+    right: 15px;
+    bottom: 15px;
+    border-radius: 50%;
+    border: 3px solid transparent;
+    /* border-top-color: #FF00FF; */
+    border-top-color:#3498db;
+    -webkit-animation: spin 1.5s linear infinite;
+    animation: spin 1.5s linear infinite;
+}
+@-webkit-keyframes spin {
+    0%   {
+        -webkit-transform: rotate(0deg);
+        -ms-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        -ms-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+@keyframes spin {
+    0%   {
+        -webkit-transform: rotate(0deg);
+        -ms-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        -ms-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
