--- a/CGV Project/css/endPage.css
+++ b/CGV Project/css/endPage.css
@@ -11,13 +11,29 @@ body {
 }
 h1{
     color: #eeeeee;
-    font-family: "Times New Roman", Times, serif;
+    font-family: 'Montserrat', sans-serif;
+    text-shadow:
+    0 0 5px #fff,
+    0 0 5px #fff,
+    0 0 35px #0ff,
+    0 0 60px #0ff,
+    0 0 70px #0ff,
+    0 0 80px #0ff,
+    0 0 100px #0ff;
     transition:all .8s ease;
     animation: slideUp .8s ease-in-out  forwards 1s;
 }
 h2{
     color: #eeeeee;
-    font-family: "Times New Roman", Times, serif;
+    font-family: 'Montserrat', sans-serif;
+    text-shadow:
+    0 0 5px #fff,
+    0 0 5px #fff,
+    0 0 35px #0ff,
+    0 0 60px #0ff,
+    0 0 70px #0ff,
+    0 0 80px #0ff,
+    0 0 100px #0ff;
     transition:all .8s ease;
     animation: slideUp .8s ease-in-out  forwards 1s;
 
