--- a/CGV Project/css/index.css
+++ b/CGV Project/css/index.css
@@ -14,8 +14,18 @@ body {
     
 }
 h1{
-    color: #eeeeee;
-    font-family: "Times New Roman", Times, serif;
+    
+    color: #fff;
+    font-family: 'Monoton', cursive;
+    font-size: 40px;
+    text-shadow:
+    0 0 5px #fff,
+    0 0 10px #fff,
+    0 0 35px #0ff,
+    0 0 60px #0ff,
+    0 0 70px #0ff,
+    0 0 80px #0ff,
+    0 0 100px #0ff;
     animation: slideUp .8s ease-in-out  forwards 1s;
 
 }
