--- a/CGV Project/css/three.css
+++ b/CGV Project/css/three.css
@@ -8,10 +8,9 @@
     width: 100%;
     background: rgba(0, 0, 0, 0.75);
     flex-direction: column;
-    display: grid;
-    /* justify-content: normal;
-    */
-    place-items: center;
+     display: flex;
+    justify-content: normal;
+    align-items: center;
     z-index: 101;
   }
   
