--- a/CGV Project/css/three.css
+++ b/CGV Project/css/three.css
@@ -6,9 +6,9 @@
     visibility: hidden;
     height: 100%;
     width: 100%;
-    background: rgba(0, 0, 0, 0.75);
+    background: rgba(140,30,255, 0.45);
     flex-direction: column;
-     display: flex;
+    display: flex;
     justify-content: normal;
     align-items: center;
     z-index: 101;
@@ -23,10 +23,18 @@
   .pause-menu-text {
     position: relative;
     margin: auto;
-    font-size: 5em;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 7em;
     color: white;
     cursor: pointer;
-    /*text-shadow: 8px 8px black;*/
+    text-shadow:
+    0 0 5px #fff,
+    0 0 10px #fff,
+    0 0 35px #0ff,
+    0 0 60px #0ff,
+    0 0 70px #0ff,
+    0 0 80px #0ff,
+    0 0 100px #0ff;
   }
 
 #Score {
