--- a/CGV Project/css/three.css
+++ b/CGV Project/css/three.css
@@ -56,23 +56,6 @@
 #time{
     position: absolute;
 	top: 10px;
-    left:0%;
-	width: 30%;
-	text-align: center;
-	z-index: 100;
-	display:block;
-    font-size: 20px;
-    font-family: 'Montserrat', sans-serif;
-    font-style: italic;
-    color: white;
-    /* border-width: 2px;
-    border-style:groove;
-    border-color: red; */
-
-}
-#Lives{
-    position: absolute;
-	top: 10px;
     left:70%;
 	width: 30%;
 	text-align: center;
@@ -88,8 +71,10 @@
 
 }
 #pause{
+    
+    color: #eeeeee;
     position: absolute;
-	top: 25px;
+	top: 10px;
     left:0%;
 	width: 30%;
 	text-align: center;
