--- a/CGV Project/css/index.css
+++ b/CGV Project/css/index.css
@@ -92,7 +92,7 @@ button{
   padding: 8px 0;
   position: absolute;
   z-index: 1;
-  bottom: 35px;
+  bottom: 300px;
   /* left: 80%; */
   margin-left: -100px;
 }
@@ -101,8 +101,8 @@ button{
 .popup .popuptext::after {
   content: "";
   position: fixed;
-  top: 100%;
-  left: 30%;
+  /* top: 100%; */
+  left: 50%;
   margin-left: -5px;
   border-width: 5px;
   border-style: solid;
