--- a/CGV Project/css/Credits.css
+++ b/CGV Project/css/Credits.css
@@ -1,108 +1,81 @@
 body {
-    background-color: rgb(9, 30, 46);
-    overflow: hidden;
-    font-family: 'Montserrat', sans-serif;
+  background-color: rgb(9, 30, 46);
+  overflow: hidden;
+  font-family: "Montserrat", sans-serif;
 }
 
-#TOP{
-    position:relative;
-    margin:0 auto;
-    clear:left;
-    height:auto;
-    z-index: 0;
-    text-align:center;
-    /* bottom: 50%; */
-    /* animation: slideUp .8s ease-in-out  forwards 1s; */
-
-    
+#TOP {
+  position: relative;
+  margin: 0 auto;
+  clear: left;
+  height: auto;
+  z-index: 0;
+  text-align: center;
+  /* bottom: 50%; */
+  /* animation: slideUp .8s ease-in-out  forwards 1s; */
 }
-h1{
-    
-    color: #fff;
-    font-family: 'Monoton', cursive;
-    font-size: 40px;
-    text-shadow:
-    0 0 5px #fff,
-    0 0 10px #fff,
-    0 0 35px #0ff,
-    0 0 60px #0ff,
-    0 0 70px #0ff,
-    0 0 80px #0ff,
-    0 0 100px #0ff;
-    animation: slideUp .8s ease-in-out  forwards 1s;
-
+h1 {
+  color: #fff;
+  font-family: "Monoton", cursive;
+  font-size: 40px;
+  text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 35px #0ff, 0 0 60px #0ff, 0 0 70px #0ff, 0 0 80px #0ff, 0 0 100px #0ff;
+  animation: slideUp 0.8s ease-in-out forwards 1s;
 }
 
-h2{
-    color: #fff;
-    font-family: 'Monoton', cursive;
-    font-size: 35px;
-    text-shadow:
-    0 0 5px #fff,
-    0 0 10px #fff,
-    0 0 35px #0ff,
-    0 0 60px #0ff,
-    0 0 70px #0ff,
-    0 0 80px #0ff,
-    0 0 100px #0ff;
-    animation: slideUp .8s ease-in-out  forwards 1s;
+h2 {
+  color: #fff;
+  font-family: "Monoton", cursive;
+  font-size: 35px;
+  text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 35px #0ff, 0 0 60px #0ff, 0 0 70px #0ff, 0 0 80px #0ff, 0 0 100px #0ff;
+  animation: slideUp 0.8s ease-in-out forwards 1s;
 }
 
-h3{
-    color: rgb(0, 0, 0);
-    /* font-family: ''; */
-    font-size: 20px;
-    text-shadow:
-    0 0 5px #fff,
-    0 0 10px #fff,
-    0 0 35px rgb(255, 255, 255),
-    0 0 60px rgb(255, 255, 255),
-    0 0 70px rgb(255, 255, 255),
-    0 0 80px rgb(255, 255, 255),
+h3 {
+  color: rgb(0, 0, 0);
+  /* font-family: ''; */
+  font-size: 20px;
+  text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 35px rgb(255, 255, 255), 0 0 60px rgb(255, 255, 255), 0 0 70px rgb(255, 255, 255), 0 0 80px rgb(255, 255, 255),
     0 0 100px rgb(255, 255, 255);
-    animation: slideUp .8s ease-in-out  forwards 1s;
+  animation: slideUp 0.8s ease-in-out forwards 1s;
 }
 
-#Middle{
-    position: fixed;
-    top: 90%;
-    left: 80%;
-    
-    transform: translate(-50%, -50%);
-    animation: slideUp .8s ease-in-out  forwards 1s;
+#Middle {
+  position: fixed;
+  top: 90%;
+  left: 80%;
 
+  transform: translate(-50%, -50%);
+  animation: slideUp 0.8s ease-in-out forwards 1s;
 }
-.buttons{
-    position: fixed;
-    top: 50%;
-    left: 50%;
-   
-    transform: translate(-50%, -50%);
-    /* animation: slideUp .8s ease-in-out  forwards 1s; */
+.buttons {
+  position: fixed;
+  top: 50%;
+  left: 50%;
 
+  transform: translate(-50%, -50%);
+  /* animation: slideUp .8s ease-in-out  forwards 1s; */
 }
-.canvas{
-   position:fixed;
+.canvas {
+  position: fixed;
 }
-button{
-    align-self: flex-end;
-    /* left: 75%; */
-    display: inline-block;
-    background-color: #50e5ff3b;
-    border-radius: 10px;
-    /* border: 4px double #cccccc; */
-    color: #eeeeee;
-    text-align: center;
-    font-size: 28px;
-    padding: 20px;
-    width: 200px;
-    -webkit-transition: all 0.5s;
-    -moz-transition: all 0.5s;
-    -o-transition: all 0.5s;
-    transition: all 0.5s;
-    cursor: pointer;
-    margin: 50px;
-    
+button {
+  align-self: flex-end;
+  /* left: 75%; */
+  display: inline-block;
+  background-color: #50e5ff3b;
+  border-radius: 10px;
+  /* border: 4px double #cccccc; */
+  color: #eeeeee;
+  text-align: center;
+  font-size: 28px;
+  padding: 20px;
+  width: 200px;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 50px;
 }
 /* @keyframes slideUp {
     0% {
